_src/assets/scss/components/_cards-form-section.scss
.form__all-sections{
  background: linear-gradient(to bottom, #f5f5f5, #ffffff);
  @media all and (min-width: 768px){
    display:flex;
    flex-direction:row-reverse;
    padding: 20px 40px;
  }
}
.form__wrapper{
  @media all and (min-width: 768px){
    flex-grow:1;
  }
}
.form__fieldset {
  font-family:$OpenSans;
  font-weight: 300;
  font-size:14px;
  color:$color-card-fill_form-section-h2;
  border-style:none;
  // border-bottom:solid 1px #d8d8d8;
 }

 // div de cabecera

 .form__fieldset-head-container {
   display:flex;
   justify-content:space-between;
   align-items: baseline;
   text-transform:uppercase;
   position:relative;
   margin-bottom:25px;
   margin-top:10px;
 }

 .form__fieldset-main_title {
   font-size:18px;
   padding: 0 0 0 28px;
 }

 .form__fieldset-main_title:before {
   content:"\f11c";
   width:21px;
   height:18px;
   font-family: "Font Awesome 5 Pro";
   font-weight:400;
   color:$color-card-fill_form-section-icon_and_button;
   position:absolute;
   left:0;
   top:4px;
 }

 .form__fieldset-main_title:after {
  content:"\f077";
  width: 16px;
  height:18px;
  font-family: "Font Awesome 5 Pro";
  color:$color-card-fill_form-section-arrow;
  position:absolute;
  right:0;
  top:4px;
 }

 // div fieldset

 .form__fieldset-content {
   font-family:$OpenSans;
   font-size:14px;
   text-align:left;
   color:$color-card-fill_form-section-label;
   display:flex;
   flex-direction:column;
   padding:0 0 7px;
 }

 .form__fieldset-content-gap {
   box-sizing: border-box;
   width: 100%;
   height:30px;
   margin:0 0 20px;
   border:solid 1px $color-card-fill_form-section-input;
   color:$color-card-fill_form-section-input-text;
   opacity:0.6;
   padding:3px 0 7px 10px;
 }
 .form__fieldset-content-gap:last-child {
  margin:0 0 18px;
}



 // div dentro del fieldset

 .form__fieldset-add_img_wrapper {
   display:grid;
   grid-template-columns: auto 1fr;
   grid-template-rows: auto auto;
   grid-column-gap:15px;
   grid-row-gap:8px;
   font-family:$OpenSans;
   font-size:14px;
   color:$color-card-fill_form-section-label;
   margin:0 0 20px;
 }

 .form__fieldset-add_img-text {
    grid-column:1/3;
    text-align:left;
    margin:0;
 }

 .form__fieldset-add_img-button {
   font-family:$OpenSans;
   font-size:14px;
   color:$color-card-fill_form-section-button-text;
   width:140px;
   height:30px;
   background-color:$color-card-fill_form-section-icon_and_button;
   border-style:none;
   border-radius:8px;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.32);
 }

 .form__fieldset-add_img-mini_container {
   border:solid 1px $color-card-fill_form-section-input;
   width:30px;
   height:30px;
 }

 .line-bottom {
   margin: 30px 0 10px;
  border-bottom:solid 1px $color-card-fill_form-section-line;
 }

